mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: perry107/mariadb:mariadbcard
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-data
        ports:
        - containerPort: 3306
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc-claim
