phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: card
  type: NodePort
